--- a/main.html
+++ b/main.html
@@ -4,154 +4,99 @@
     <meta charset="UTF-8" />
     <title>ЦГБ-Н — Главная</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <script src="https://unpkg.com/@vkontakte/vk-id-sdk"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: #f2f3f5;
+            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
         }
-
-        .main-container {
-            max-width: 800px;
-            margin: 50px auto;
-            background: #fff;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-        }
-
-        h1, h2 {
+        header {
+            background-color: #009688;
+            color: white;
+            padding: 20px;
             text-align: center;
-            color: #2c3e50;
         }
-
-        label {
-            font-weight: bold;
-            margin-top: 15px;
+        .container {
+            padding: 40px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .vk-button {
             display: block;
-        }
-
-        input, button, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 15px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #3b7ddd;
+            background-color: #4a76a8;
             color: white;
             border: none;
+            padding: 12px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            margin: 20px auto;
             cursor: pointer;
         }
-
-        button:hover {
-            background-color: #315fc4;
+        .vk-button:hover {
+            background-color: #3a5a80;
         }
-
-        #result {
-            white-space: pre-line;
-            background: #f9f9f9;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        .user-info {
-            margin-bottom: 30px;
-        }
-
-        .user-info p {
-            font-size: 18px;
-            color: #2d3436;
+        .welcome {
+            text-align: center;
+            font-size: 20px;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
-    <div class="main-container">
-        <h1>Генератор приказов ЦГБ-Н</h1>
 
-        <div class="user-info">
-            <p>Добро пожаловать, <span id="user-name">...</span></p>
+    <header>
+        <h1>ЦГБ-Н — Главная страница</h1>
+    </header>
 
-            <label for="user-position">Ваша должность:</label>
-            <input type="text" id="user-position" placeholder="Например: Заведующий отделением" />
-
-            <label for="user-signature">Ваша подпись (ФИО полностью):</label>
-            <input type="text" id="user-signature" placeholder="Иванов Иван Иванович" />
-        </div>
-
-        <div class="order-form">
-            <h2>📜 Создание приказа</h2>
-
-            <label for="new-employee">ФИО нового сотрудника:</label>
-            <input type="text" id="new-employee" placeholder="Иванов Иван Иванович" />
-
-            <label for="employee-position">Должность сотрудника:</label>
-            <input type="text" id="employee-position" placeholder="Фельдшер" />
-
-            <label for="accept-date">Дата принятия:</label>
-            <input type="date" id="accept-date" />
-
-            <button onclick="generateAcceptOrder()">Сгенерировать приказ</button>
-
-            <div id="result"></div>
-
-            <button onclick="copyToClipboard()">Копировать текст приказа</button>
+    <div class="container">
+        <button class="vk-button" id="vk-button">Войти через VK ID</button>
+        <div class="welcome" id="welcome-message" style="display: none;">
+            Добро пожаловать, <span id="user-name"></span>!
         </div>
     </div>
 
     <script>
-        window.onload = function() {
+        // Проверка входа при загрузке
+        window.onload = function () {
             const userName = localStorage.getItem("userName");
             if (!userName) {
-                alert("Пожалуйста, выполните вход через VK.");
-                window.location.href = "index.html"; // Путь к странице входа
-                return;
+                document.getElementById("vk-button").style.display = "block";
+                document.getElementById("welcome-message").style.display = "none";
+            } else {
+                document.getElementById("vk-button").style.display = "none";
+                document.getElementById("welcome-message").style.display = "block";
+                document.getElementById("user-name").textContent = userName;
             }
-            document.getElementById("user-name").textContent = userName;
         };
 
-        function generateAcceptOrder() {
-            const userName = localStorage.getItem("userName") || "Пользователь";
-            const userPosition = document.getElementById("user-position").value || "—";
-            const userSignature = document.getElementById("user-signature").value || "—";
-
-            const newEmployee = document.getElementById("new-employee").value;
-            const position = document.getElementById("employee-position").value;
-            const dateInput = document.getElementById("accept-date").value;
-            const date = dateInput ? new Date(dateInput).toLocaleDateString('ru-RU') : new Date().toLocaleDateString('ru-RU');
-
-            if (!newEmployee || !position) {
-                alert("Пожалуйста, заполните ФИО и должность нового сотрудника.");
+        // Обработка входа через VK ID
+        document.getElementById("vk-button").onclick = function () {
+            if (typeof VKID === "undefined") {
+                alert("VK ID SDK не загружен. Попробуйте позже.");
                 return;
             }
 
-            const orderText = `[ЦГБ-Н] Приказ о принятии #${Math.floor(Math.random() * 9000) + 1000}\n\n` +
-                `На основании заявления и трудового договора\n` +
-                `ПРИНИМАЮ:\n` +
-                `${newEmployee} на должность ${position}\n` +
-                `Дата вступления в должность: ${date}\n\n` +
-                `Подписано: ${userSignature}\n` +
-                `Должность подписанта: ${userPosition}`;
+            // Создаем объект VKID и вызываем логин
+            const config = new VKID.Config({
+                app: 53689889, // 🔁 Укажи здесь свой VK App ID
+                redirectUrl: window.location.href
+            });
 
-            document.getElementById("result").textContent = orderText;
-        }
+            const auth = new VKID.Auth(config);
 
-        function copyToClipboard() {
-            const text = document.getElementById("result").textContent;
-            if (!text) {
-                alert("Сначала сгенерируйте приказ.");
-                return;
-            }
-            navigator.clipboard.writeText(text);
-            alert("Приказ скопирован!");
-        }
+            auth.login()
+                .then((user) => {
+                    localStorage.setItem("userName", user.first_name + " " + user.last_name);
+                    window.location.reload();
+                })
+                .catch((error) => {
+                    console.error("Ошибка входа:", error);
+                    alert("Ошибка входа через VK");
+                });
+        };
     </script>
+
 </body>
 </html>
