--- a/main.html
+++ b/main.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>ЦГБ-Н — Главная</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <script src="https://unpkg.com/@vkontakte/vk-id-sdk"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -42,6 +41,11 @@
             font-size: 20px;
             margin-top: 30px;
         }
+        .error-message {
+            color: red;
+            text-align: center;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -55,46 +59,57 @@
         <div class="welcome" id="welcome-message" style="display: none;">
             Добро пожаловать, <span id="user-name"></span>!
         </div>
+        <div class="error-message" id="error-message" style="display: none;">
+            Ошибка загрузки VK ID. Попробуйте обновить страницу.
+        </div>
     </div>
 
+    <!-- Подключаем VK ID SDK -->
+    <script src="https://unpkg.com/@vkontakte/vk-id-sdk"></script>
     <script>
-        // Проверка входа при загрузке
-        window.onload = function () {
-            const userName = localStorage.getItem("userName");
-            if (!userName) {
-                document.getElementById("vk-button").style.display = "block";
-                document.getElementById("welcome-message").style.display = "none";
-            } else {
-                document.getElementById("vk-button").style.display = "none";
-                document.getElementById("welcome-message").style.display = "block";
-                document.getElementById("user-name").textContent = userName;
-            }
-        };
-
-        // Обработка входа через VK ID
-        document.getElementById("vk-button").onclick = function () {
-            if (typeof VKID === "undefined") {
-                alert("VK ID SDK не загружен. Попробуйте позже.");
+        // Проверяем, загружен ли SDK, и ждём, если нужно
+        function initVKID() {
+            if (typeof VKID === 'undefined') {
+                console.error('VK ID SDK не загружен');
+                document.getElementById('error-message').style.display = 'block';
                 return;
             }
 
-            // Создаем объект VKID и вызываем логин
-            const config = new VKID.Config({
-                app: 53689889, // 🔁 Укажи здесь свой VK App ID
-                redirectUrl: window.location.href
-            });
-
-            const auth = new VKID.Auth(config);
-
-            auth.login()
-                .then((user) => {
-                    localStorage.setItem("userName", user.first_name + " " + user.last_name);
-                    window.location.reload();
-                })
-                .catch((error) => {
-                    console.error("Ошибка входа:", error);
-                    alert("Ошибка входа через VK");
+            // Настройка кнопки входа
+            document.getElementById('vk-button').onclick = function() {
+                const config = new VKID.Config({
+                    app: 53689889, // 🔄 Замените на свой VK App ID
+                    redirectUrl: window.location.href
                 });
+
+                const auth = new VKID.Auth(config);
+
+                auth.login()
+                    .then((user) => {
+                        localStorage.setItem('userName', user.first_name + ' ' + user.last_name);
+                        window.location.reload();
+                    })
+                    .catch((error) => {
+                        console.error('Ошибка входа:', error);
+                        alert('Ошибка входа через VK');
+                    });
+            };
+        }
+
+        // Проверяем вход при загрузке
+        window.onload = function() {
+            const userName = localStorage.getItem('userName');
+            if (!userName) {
+                document.getElementById('vk-button').style.display = 'block';
+                document.getElementById('welcome-message').style.display = 'none';
+            } else {
+                document.getElementById('vk-button').style.display = 'none';
+                document.getElementById('welcome-message').style.display = 'block';
+                document.getElementById('user-name').textContent = userName;
+            }
+
+            // Даём SDK время на загрузку
+            setTimeout(initVKID, 1000);
         };
     </script>
 
