--- a/index.html
+++ b/index.html
@@ -1,170 +1,149 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вход — Министерство здравоохранения</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #111;
-      color: #fff;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 50px;
-      background-color: #000;
-    }
-
-    header h1 {
-      font-size: 22px;
-    }
-
-    nav a {
-      color: #ccc;
-      text-decoration: none;
-      margin: 0 10px;
-      font-size: 14px;
-    }
-
-    .login-box {
-      margin: auto;
-      background-color: #1c1c1c;
-      padding: 30px 40px;
-      border-radius: 12px;
-      text-align: center;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    }
-
-    .login-box h2 {
-      margin-bottom: 20px;
-    }
-
-    .vk-button {
-      background-color: #0077FF;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-    }
-
-    .vk-button i {
-      font-size: 20px;
-    }
-
-    footer {
-      padding: 20px 50px;
-      background-color: #000;
-      font-size: 13px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: #888;
-    }
-
-    footer a {
-      color: #888;
-      text-decoration: none;
-      margin-left: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>ЦГБ-Н — Главная</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #009688;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            padding: 40px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .vk-button {
+            display: block;
+            background-color: #4a76a8;
+            color: white;
+            border: none;
+            padding: 12px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            margin: 20px auto;
+            cursor: pointer;
+        }
+        .vk-button:hover {
+            background-color: #3a5a80;
+        }
+        .welcome {
+            text-align: center;
+            font-size: 20px;
+            margin-top: 30px;
+        }
+        .error-message {
+            color: red;
+            text-align: center;
+            margin-top: 20px;
+            display: none;
+        }
+        .loader {
+            text-align: center;
+            margin: 20px;
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <h1>🛡 Министерство здравоохранения</h1>
-    <nav>
-      <a href="#">Как вступить</a>
-      <a href="#">ЖА для ПК</a>
-      <a href="#">О нас</a>
-    </nav>
-    <button style="background: #e74c3c; color: white; border: none; padding: 10px 15px; border-radius: 8px;">Панель управления</button>
-  </header>
+    <header>
+        <h1>ЦГБ-Н — Главная страница</h1>
+    </header>
 
-  <div class="login-box">
-    <h2>Вход</h2>
-    <button class="vk-button" onclick="showVKID()">
-      <i class="fab fa-vk"></i> Войти с помощью VK ID
-    </button>
-    <div id="vkid-container" style="margin-top: 20px;"></div>
-  </div>
-
-  <footer>
-    <div>
-      © 2022 – 2025 GTM. Все права защищены. (v.1.0.9)
+    <div class="container">
+        <button class="vk-button" id="vk-button" style="display: none;">Войти через VK ID</button>
+        <div class="welcome" id="welcome-message" style="display: none;">
+            Добро пожаловать, <span id="user-name"></span>!
+        </div>
+        <div class="error-message" id="error-message">
+            Ошибка загрузки VK ID. Попробуйте обновить страницу.
+        </div>
+        <div class="loader" id="loader">
+            Загрузка VK ID...
+        </div>
     </div>
-    <div>
-      <a href="#">Статистика</a>
-      <a href="#">Форум</a>
-      <a href="#">Сообщить об ошибке</a>
-    </div>
-  </footer>
 
-  <script src="https://unpkg.com/@vkid/sdk@2.25.0/dist-sdk/umd/index.js"></script>
-  <script>
-    let widgetRendered = false;
+    <!-- Официальный CDN от VK (надежнее, чем unpkg) -->
+    <script src="https://id.vk.com/vkid/1.0.0/vkid.js"></script>
+    <script>
+        // Проверяем, вошел ли пользователь ранее
+        function checkAuth() {
+            const userName = localStorage.getItem('userName');
+            if (userName) {
+                document.getElementById('vk-button').style.display = 'none';
+                document.getElementById('welcome-message').style.display = 'block';
+                document.getElementById('user-name').textContent = userName;
+                return true;
+            }
+            return false;
+        }
 
-    function showVKID() {
-      if (widgetRendered) return;
+        // Инициализация VKID
+        function initVKID() {
+            if (typeof VKID === 'undefined') {
+                console.error('VK ID SDK не загружен');
+                document.getElementById('error-message').style.display = 'block';
+                return;
+            }
 
-      const VKID = window.VKIDSDK;
+            // Показываем кнопку, если пользователь не авторизован
+            if (!checkAuth()) {
+                document.getElementById('vk-button').style.display = 'block';
+            }
 
-      VKID.Config.init({
-        app: 53689889,
-        redirectUrl: window.location.href,
-        responseMode: VKID.ConfigResponseMode.Callback,
-        source: VKID.ConfigSource.LOWCODE,
-        scope: ''
-      });
+            // Настройка входа через VK ID
+            document.getElementById('vk-button').onclick = function() {
+                const config = new VKID.Config({
+                    app: 53689889, // 🔄 ЗАМЕНИТЕ НА ВАШ APP_ID из VK Dev!
+                    redirectUrl: window.location.href
+                });
 
-      const oAuth = new VKID.OAuthList();
+                const auth = new VKID.Auth(config);
+                auth.login()
+                    .then((user) => {
+                        localStorage.setItem('userName', user.first_name + ' ' + user.last_name);
+                        window.location.reload();
+                    })
+                    .catch((error) => {
+                        console.error('Ошибка входа:', error);
+                        alert('Ошибка входа через VK: ' + error.message);
+                    });
+            };
+        }
 
-      oAuth.render({
-        container: document.getElementById("vkid-container"),
-        oauthList: ['vkid']
-      })
-      .on(VKID.WidgetEvents.ERROR, vkidOnError)
-      .on(VKID.OAuthListInternalEvents.LOGIN_SUCCESS, function (payload) {
-        const code = payload.code;
-        const deviceId = payload.device_id;
+        // Ждем загрузки страницы и SDK
+        window.addEventListener('DOMContentLoaded', function() {
+            document.getElementById('loader').style.display = 'block';
+            document.getElementById('error-message').style.display = 'none';
 
-        VKID.Auth.exchangeCode(code, deviceId)
-          .then(vkidOnSuccess)
-          .catch(vkidOnError);
-      });
+            // Даем SDK 3 секунды на загрузку
+            const sdkCheckInterval = setInterval(function() {
+                if (typeof VKID !== 'undefined') {
+                    clearInterval(sdkCheckInterval);
+                    document.getElementById('loader').style.display = 'none';
+                    initVKID();
+                }
+            }, 100);
 
-      widgetRendered = true;
-    }
-
-    function vkidOnSuccess(data) {
-      const userName = data.user_info?.name || "Пользователь";
-      localStorage.setItem("userName", userName);
-      window.location.href = "main.html";
-    }
-
-    function vkidOnError(error) {
-      alert("Ошибка входа: " + JSON.stringify(error));
-    }
-  </script>
-
+            // Если SDK не загрузился за 5 секунд
+            setTimeout(function() {
+                if (typeof VKID === 'undefined') {
+                    clearInterval(sdkCheckInterval);
+                    document.getElementById('loader').style.display = 'none';
+                    document.getElementById('error-message').style.display = 'block';
+                }
+            }, 5000);
+        });
+    </script>
 </body>
 </html>
